# syrinx

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  PARITY.md  README.md  REFERENCE.md  list.md  plan.md  ratchet.toml  rule.md  spec.md
.github/workflows/: ci.yml  ratchet-gate.yml  ratchet-regression.yml
.ratchet/: format.schema  stats.jsonl  verified.json
.ratchet/detectors/: MANIFEST
.ratchet/journal/: run-1781474453265.jsonl  run-1781478833656.jsonl  run-1781512687618.jsonl  run-1781515413797.jsonl  run-1781519322984.jsonl  run-1781530691520.jsonl  run-1781549332314.jsonl  run-1781603385061.jsonl
.ratchet/reports/: run-1781474453265.md
crates/syrinx-acoustic/: Cargo.toml
crates/syrinx-acoustic/docs/: STREAMING.md
crates/syrinx-acoustic/src/: lib.rs  real.rs  real_cv3.rs
crates/syrinx-acoustic/src/cv2/: conformer.rs  estimator.rs  mod.rs  streaming.rs
crates/syrinx-acoustic/src/cv3/: mod.rs
crates/syrinx-acoustic/src/real/: cfm.rs  load.rs  streaming.rs
crates/syrinx-acoustic/src/real_cv3/: cfm.rs  dit.rs  frontend.rs  mod.rs  streaming.rs
crates/syrinx-acoustic/tests/: real_token2wav_parity.rs
crates/syrinx-cli/: Cargo.toml
crates/syrinx-cli/src/: main.rs
crates/syrinx-core/: Cargo.toml
crates/syrinx-core/src/: lib.rs  root.rs  weights.rs
crates/syrinx-eval/: Cargo.toml
crates/syrinx-eval/src/: lib.rs  metrics.rs  real.rs
crates/syrinx-fish/: Cargo.toml
crates/syrinx-fish/src/: lib.rs
crates/syrinx-fish/src/common/: audio.rs  codec.rs  config.rs  dualar.rs  mod.rs  sampling.rs
crates/syrinx-fish/src/s1/: codec.rs  fast_ar.rs  load.rs  mod.rs  nn.rs  slow_ar.rs  tokenizer.rs
crates/syrinx-fish/src/s2/: codec.rs  fast_ar.rs  load.rs  mod.rs  nn.rs  slow_ar.rs  tokenizer.rs
crates/syrinx-frontend/: Cargo.toml
crates/syrinx-frontend/src/: context.rs  contract.rs  expand.rs  feat.rs  g2p.rs  hetero.rs  lexicon.rs  lib.rs  normalize.rs  pacing.rs  punct.rs  speech_token.rs  ssml.rs  textnorm.rs  tokenizer.rs
crates/syrinx-lm/: Cargo.toml
crates/syrinx-lm/src/: block.rs  forward.rs  lib.rs  real.rs  real_cv3.rs  root.rs  stage.rs
crates/syrinx-lm/src/cv2/: attention.rs  generate.rs  load.rs  quant.rs
crates/syrinx-lm/src/cv3/: generate.rs  lm.rs  mod.rs  sampling.rs
crates/syrinx-lm/src/real/: mod.rs  sampling.rs
crates/syrinx-lm/src/real_cv3/: gendebug.rs  generate.rs  lm.rs  mod.rs
crates/syrinx-lm/tests/: real_lm_hammer.rs
crates/syrinx-prosody/: Cargo.toml
crates/syrinx-prosody/docs/: CONTROL-SURFACES.md  PITCH-DURATION.md
crates/syrinx-prosody/src/: contour.rs  duration.rs  lib.rs  lipsync.rs  markup.rs  pitch.rs  plan.rs  rate.rs  render.rs  render_plan.rs  roundtrip.rs  volume.rs
crates/syrinx-serve/: Cargo.toml
crates/syrinx-serve/docs/: WATERMARK.md
crates/syrinx-serve/examples/: gpu_bench.rs  stream_audio_diag.rs  stream_demo.rs  stream_mel_diag.rs
crates/syrinx-serve/src/: emotion.rs  lib.rs  synth.rs  synth_cv3.rs  watermark.rs  wavio.rs
crates/syrinx-serve/src/synth/: cond.rs  generate.rs  instruct.rs  mod.rs  prosody.rs  source.rs  streaming.rs  token2wav.rs  voice.rs  watermark.rs
crates/syrinx-serve/src/synth_cv3/: cond.rs  generate.rs  instruct.rs  mod.rs  source.rs  streaming.rs  tagged.rs  token2wav.rs  voice.rs
crates/syrinx-serve/src/voice/: library.rs  manip.rs  mod.rs
crates/syrinx-speaker/: Cargo.toml
crates/syrinx-speaker/src/: lib.rs  real.rs
crates/syrinx-speaker/src/campplus/: quant.rs
crates/syrinx-speaker/src/real/: mod.rs  pooling.rs  tdnn.rs
crates/syrinx-speaker/tests/: real_speaker_parity.rs
crates/syrinx-stream/: Cargo.toml
crates/syrinx-stream/src/: lib.rs  resample.rs
crates/syrinx-stt/: Cargo.toml
crates/syrinx-stt/src/: lib.rs  stt.rs  wermetric.rs
crates/syrinx-stt/src/stt/: resample.rs
crates/syrinx-vocoder/: Cargo.toml
crates/syrinx-vocoder/src/: lib.rs  real.rs  real_cv3.rs
crates/syrinx-vocoder/src/cv2/: istft.rs  mod.rs  quant.rs  source.rs
crates/syrinx-vocoder/src/cv3/: f0.rs  mod.rs  quant.rs
crates/syrinx-vocoder/src/real/: resblock.rs
crates/syrinx-vocoder/src/real_cv3/: decode.rs  mod.rs  quant.rs  stft.rs
crates/syrinx-vocoder/tests/: real_vocoder_parity.rs
samples/: README.md  fish-samples.jsonl
scripts/: eval_mos.py  eval_wer.py  gen-fish-ref.py  run-fish.sh  synth-samples.sh  test-all.env.example  test-all.sh  verify.sh
src/: lib.rs
tests/: attention_prop.rs  audio_server.rs  block_prop.rs  context_window.rs  contour.rs  contract_version.rs  core_arith_parity.rs  core_ops_parity.rs  duration_override.rs  edit_phoneme.rs  emotion_tags.rs  eval_harness.rs  eval_manifest.rs  expand_numbers.rs  frontend_suite.rs  g2p.rs  health_endpoint.rs  hetero.rs  lexicon.rs  lipsync_timeline.rs  lm_forward_parity.rs  lm_stage_parity.rs  normalize.rs  normalize_golden.rs  overrides.rs  pacing.rs  pitch_override.rs  prosody_control_smoke.rs  prosody_plan.rs  prosody_plan_render_smoke.rs  punct.rs  real_cv3_e2e_parity.rs  real_cv3_emotion.rs  real_cv3_eval_metrics.rs  real_cv3_flow_parity.rs  real_cv3_flow_stream_consistency.rs  real_cv3_hift_parity.rs  real_cv3_lm_parity.rs  real_cv3_multinomial.rs  real_cv3_quality_source.rs  (+40 more)
tests/golden/frontend_suite/normalize/: collapse.in  two.in
tests/golden/frontend_suite/numbers/: currency.expected  currency.in  date.expected  date.in  ordinal.expected
tests/golden/frontend_suite/ssml/: break_tag.expected  break_tag.in  emphasis.expected  emphasis.in  error.expected  error.in  plain.expected
tests/golden/g2p/: cat.expected  fish.expected  ship.expected  sun.expected  the.expected  van.expected
tests/golden/normalize/: casing_preserved.in  nfc_caps_preserved.expected  nfc_caps_preserved.in  ws_collapse.in  ws_internal_runs.in
tests/golden/parity/: add.json  causal_mask.json  embed.json  linear.json  lm_attn0.json  lm_block0.json  lm_embed.json  lm_forward.json  matmul.json  mul.json  rmsnorm.json  rope.json  silu.json  softmax.json  weights_sample.json
