[package]
name = "syrinx-cli"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "syrinx"
path = "src/main.rs"

[features]
# The real `synth`/`serve`/`stream` commands are the primary build — ON BY DEFAULT.
# They load the CosyVoice2/3 `Synthesizer` (via syrinx-serve's `real` capstone) and
# render `text + reference voice -> 24 kHz WAV`.
default = ["real"]
real = [
    "dep:syrinx-serve",
    "dep:syrinx-prosody",
    "dep:syrinx-fish",
    "dep:serde_json",
    "dep:candle-core",
    "syrinx-serve/real",
    "syrinx-fish/real",
]
# Text normalization: build the CLI with `tn` to normalize text (wetext-style zh+en)
# before tokenizing in the `synth`/`serve`/`stream` paths. A build-time choice (the
# synth's normalization hook is compile-gated); `--features real,tn`.
tn = ["real", "syrinx-serve/tn"]
# GPU (CUDA) speed path for `--cuda`: pulls syrinx-serve's `cuda` feature so
# `pick_device`/`load_on_device` can open `cuda:i`. Output is not bit-equal to the
# CPU reference — CUDA is for speed only.
cuda = ["real", "syrinx-serve/cuda", "syrinx-fish/cuda"]

[dependencies]
# The synthesizer + WAV-I/O helpers live behind syrinx-serve's `real` feature;
# pulled in only under this crate's `real` feature. Args are hand-rolled (no clap)
# and the WAV codec is reused from syrinx-serve (`wavio`), keeping deps minimal.
syrinx-serve = { path = "../syrinx-serve", optional = true }
# The editable prosody `RenderPlan` for `synth --pitch/--rate/--plan` (pure-Rust).
syrinx-prosody = { path = "../syrinx-prosody", optional = true }
# The pure-Rust Fish Audio port (openaudio-s1-mini / s2-pro) behind `synth --fish`;
# pulled only under `real` (its Candle backends live behind `syrinx-fish/real`).
syrinx-fish = { path = "../syrinx-fish", optional = true }
# Parse a `--plan <FILE.json>` render plan.
serde_json = { version = "1", optional = true }
# The `Device` handed to `Cv3Synthesizer::load_with_lm` for the `--rl` checkpoint
# path (mirrors the loaders' device threading); pulled only under `real`.
candle-core = { version = "0.8", optional = true }
