[package]
name = "syrinx-eval"
version = "0.0.0"
edition = "2021"
publish = false

[features]
# Real measured metrics (`real` module) — the primary build, ON BY DEFAULT: SIM-o
# (CAM++ cosine), RTF, and TTFB computed by running the real CosyVoice2/3
# `Synthesizer`.
default = ["real"]
real = ["dep:syrinx-serve", "syrinx-serve/real"]

[dependencies]
# The real synthesizer (+ its WAV resampler) the measured metrics drive. Optional,
# only pulled in by this crate's `real` feature.
syrinx-serve = { path = "../syrinx-serve", optional = true }
