[package]
name = "syrinx-frontend"
version = "0.0.0"
edition = "2021"
publish = false

[features]
# Real-model track (model box only): off by default so the toy/CI build stays
# light + dependency-free. Enabled for numerical parity against the CosyVoice2
# Python reference. The text tokenizer pulls the Hugging Face `tokenizers` crate.
real = ["dep:tokenizers"]

[dependencies]
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Real text-tokenizer backend (feature `real`): the Hugging Face `tokenizers`
# crate loads the model's serialized Qwen2 BPE `tokenizer.json` (incl. the
# CosyVoice2 added special tokens) for exact `text -> token ids` parity.
# `default-features = false` drops the `progressbar` + C++ `esaxx_fast` (trainer)
# features we never use; `onig` provides the regex engine the Qwen pre-tokenizer's
# split needs (vendored oniguruma, built via `cc`).
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
