[package]
name = "syrinx-lm"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
# `lib.rs` (T-02.02a `attention`) is kept byte-identical to its freeze base, so
# the crate root lives in `root.rs`, which wires `lib.rs` together with the
# isolated `block.rs` (T-02.02b SwiGLU FFN + pre-norm residual block).
path = "src/root.rs"

[features]
# The real CosyVoice2 LM forward (DESIGN T2.1) on Candle. Off by default so the
# toy parity build + CI stay Candle-free; enabled on the GPU box for real parity.
real = ["dep:candle-core", "dep:candle-nn"]
# GPU (CUDA) speed path: the same `real` forward, with Candle's CUDA backend so
# `Qwen2Lm::load(.., Device::new_cuda(..))` runs the KV-cache decode on GPU.
# Output is not bit-equal to the CPU reference — CUDA is for speed only.
cuda = ["real", "candle-core/cuda", "candle-nn/cuda"]

[dependencies]
# T-02.02a attention composes the `syrinx-core` reference primitives
# (`linear`/`rope`) over the `Tensor` contract; T-02.02b's block/FFN add
# `silu`/`mul`/`add`/`rmsnorm`.
syrinx-core = { path = "../syrinx-core" }
# Real-model backend (feature `real`): the Qwen2-0.5B forward + weight loading.
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
