[package]
name = "syrinx-lm"
version = "0.0.0"
edition = "2021"
publish = false

[features]
# The real CosyVoice2/3 LM forward (DESIGN T2.1) on Candle — the primary build,
# ON BY DEFAULT. Candle is a normal dependency of the real port.
default = ["real"]
real = ["dep:candle-core", "dep:candle-nn"]
# GPU (CUDA) speed path: the same `real` forward, with Candle's CUDA backend so
# `Qwen2Lm::load(.., Device::new_cuda(..))` runs the KV-cache decode on GPU.
# Output is not bit-equal to the CPU reference — CUDA is for speed only.
cuda = ["real", "candle-core/cuda", "candle-nn/cuda"]

[dependencies]
# Real-model backend (feature `real`, default-on): the Qwen2-0.5B forward + weight
# loading.
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
