[package]
name = "syrinx-speaker"
version = "0.0.0"
edition = "2021"
publish = false

[features]
# The real ports are the primary build — ON BY DEFAULT.
default = ["real"]
# The real CosyVoice2 speaker encoder (CAM++ / campplus) forward on Candle.
real = ["dep:candle-core", "dep:candle-nn"]
# GPU (CUDA) speed path (see syrinx-lm `cuda`). Output is not bit-equal to CPU.
cuda = ["real", "candle-core/cuda", "candle-nn/cuda"]

[dependencies]
# Real-model backend (feature `real`): the CAM++ x-vector forward + fp32 weight
# loading (ported from the ONNX graph). Mirrors syrinx-lm's `real` track.
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
