[package]
name = "syrinx-vocoder"
version = "0.0.0"
edition = "2021"
publish = false

[features]
# The real ports are the primary build — ON BY DEFAULT.
default = ["real"]
# The real CosyVoice2 HiFT vocoder forward on Candle (CPU fp32).
real = ["dep:candle-core", "dep:candle-nn"]
# GPU (CUDA) speed path (see syrinx-lm `cuda`). Output is not bit-equal to CPU.
cuda = ["real", "candle-core/cuda", "candle-nn/cuda"]

[dependencies]
# Real-model backend (feature `real`): the HiFTGenerator decode() forward + the
# folded-weight-norm safetensors loader. Mirrors syrinx-lm's `real` track.
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
